fix logging z-index stuff

--- a/public/css/layouts/layouts_main.css
+++ b/public/css/layouts/layouts_main.css
@@ -290,8 +290,7 @@ h4 {
   background-color: rgba(255, 255, 255, 0.9);
   display: flex;
   justify-content: center;
-  align-items: center;
-  z-index: 2; }
+  align-items: center; }
   .log-overlay-bg .log--overlay {
     background-color: #fff;
     display: flex;
@@ -338,10 +337,10 @@ h4 {
   height: 100vh;
   width: 100vw;
   cursor: url(../../assets/img/exit.png), default;
-  z-index: 3; }
+  z-index: 1; }
 
-.log-module {
-  z-index: 5; }
+.todays-logs__log-wrapper--overlay {
+  z-index: 2; }
 
 .index .header {
   background-repeat: no-repeat;
@@ -581,6 +580,9 @@ h4 {
 
 .opacity-0 {
   opacity: 0; }
+
+.opacity-01 {
+  opacity: 0.1; }
 
 .pipe {
   margin-left: 7px; }
