--- a/public/scss/modules/module_log-overlay.scss
+++ b/public/scss/modules/module_log-overlay.scss
@@ -7,7 +7,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
 
     .log--overlay {
         background-color: #fff;
@@ -74,9 +73,9 @@
     height: 100vh;
     width: 100vw;
     cursor: url(../../assets/img/exit.png), default;
-    z-index: 3;
+    z-index: 1;
 }
 
-.log-module {
-    z-index: 5;
+.todays-logs__log-wrapper--overlay {
+    z-index: 2;
 }
