--- a/public/scss/utilities/utilities_main.scss
+++ b/public/scss/utilities/utilities_main.scss
@@ -14,6 +14,10 @@
     opacity: 0;
 }
 
+.opacity-01 {
+    opacity: 0.1;
+}
+
 .pipe {
     margin-left: 7px;
 }
